# cpp_snippets

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  cpp_snippets.code-workspace  readme.md
.github/workflows/: cmake-single-platform.yml
include/: InputDataHandler.hpp  main.hpp  utilities.hpp
src/: InputDataHandler.cpp  main.cpp  plot_xy_data.py  utilities.cpp
test/: test.cpp  test_InputDataHandler.cpp  test_utilities.cpp
test/data/: bkg000_x_017800_y_014600_ExpTime_us_000100_FrameNum_0000.csv  bkg000_x_017800_y_014600_ExpTime_us_000100_FrameNum_0001.csv
